--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -102,19 +102,19 @@
 
 @layer base {
   @font-face {
-    font-family: InterVariable;
-    font-style: normal;
+    font-family: 'InterVariable';
+    src: url('../fonts/InterVariable.woff2') format('woff2');
     font-weight: 100 900;
     font-display: swap;
-    src: url('/public/fonts/InterVariable.woff2') format('woff2');
+    font-style: normal;
   }
 
   @font-face {
-    font-family: InterVariable;
-    font-style: italic;
+    font-family: 'InterVariable';
+    src: url('../fonts/InterVariable-Italic.woff2') format('woff2');
     font-weight: 100 900;
     font-display: swap;
-    src: url('/public/fonts/InterVariable-Italic.woff2') format('woff2');
+    font-style: italic;
   }
 
   input[type='number']::-webkit-inner-spin-button,
