--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <!-- PWA tags -->
-<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="TeamRunner">
 <link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
