--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -14,8 +14,8 @@
     data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
     class="h-[calc(100%-2rem)] flex flex-col overflow-y-auto p-2 bg-white dark:bg-slate-800 border dark:border-slate-700 m-4 mr-0 rounded-lg shadow-xl"
   >
-    <div class="mb-4 text-xl font-bold mx-2 mt-2">
-      <span class="text-indigo-600 dark:text-indigo-500">Team</span><span>Runner</span>
+    <div class="mx-2 mt-2 mb-4">
+      <%= inline_svg_tag 'logo.svg', class: 'w-48' %>
     </div>
 
     <!-- Main navigation links -->
