--- a/app/views/devise/_auth_layout.html.erb
+++ b/app/views/devise/_auth_layout.html.erb
@@ -1,13 +1,13 @@
-<div class="flex flex-col items-center justify-center mb-28">
+<div class="flex flex-col items-center justify-center">
   <div class="sm:flex-1 flex flex-col justify-center sm:w-[428px] w-full">
-    <div>
-      <div class="mt-6">
-        <%= yield :masthead %>
-      </div>
-
-      <div class="bg-slate-100/50 dark:bg-slate-800/50 dark:border-slate-700/80 shadow-sm rounded-lg p-8 border border-slate-300/60">
-        <%= yield %>
-      </div>
+    <div class="mt-6">
+      <%= yield :masthead %>
     </div>
+
+    <div class="bg-slate-100/50 dark:bg-slate-800/50 dark:border-slate-700/80 shadow-sm rounded-xl p-8 border border-slate-300/60">
+      <%= yield %>
+    </div>
+
+    <%= yield :footer %>
   </div>
 </div>
