--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,9 +2,17 @@
 
 <% content_for :masthead do %>
   <div class="text-center">
-    <h1 class="heading my-3">Forgot password?</h1>
-    <p class="mb-6 text-slate-700 dark:text-slate-200">
-      Don&#8217;t have an account? <%= link_to "Sign up", new_registration_path(resource_name), class: 'btn-link' %>
+    <div class="flex justify-center">
+      <%= inline_svg_tag 'logo.svg', class: 'w-64' %>
+    </div>
+    <h1 class="subheading my-6">Forgot password?</h1>
+  </div>
+<% end %>
+
+<% content_for :footer do %>
+  <div class="text-center mt-4">
+    <p class="mt-4 text-light leading-none">
+      Don&#8217;t have an account? <%= link_to 'Sign up', new_registration_path(resource_name), class: 'btn-link' %>
     </p>
   </div>
 <% end %>
@@ -13,7 +21,7 @@
   <%= form_for resource, as: resource_name, url: password_path(resource_name), data: { controller: 'form-validation' }, html: { method: :post, novalidate: true } do |f| %>
     <%= render 'devise/shared/error_messages', resource: resource %>
 
-    <p class="mb-6 text-soft text-sm">Enter your email address and we'll send you an email with instructions and a link to reset your password.</p>
+    <p class="mb-6 text-soft text-sm">Enter your email address below. We&#8217;ll send you an email with instructions and a link to reset your password.</p>
 
     <div class="form-group">
       <%= f.label :email, class: 'form-label' %>
