config(app name): rename app from "TeamRunner" to "PaceMaker"

--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -64,7 +64,7 @@
       <%= inline_svg_tag 'icons/google-logo.svg', class: 'size-5' %>
       Link Google Account
     <% end %>
-    <p class="help-text my-1">The email on your Google account must match the email on your TeamRunner account.</p>
+    <p class="help-text my-1">The email on your Google account must match the email on your PaceMaker account.</p>
   <% end %>
 </div>
 
