--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,10 +1,10 @@
-<title><%= content_for?(:title) ? "#{yield(:title)} / TeamRunner" : 'TeamRunner' %></title>
+<title><%= content_for?(:title) ? "#{yield(:title)} / PaceMaker" : 'PaceMaker' %></title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <!-- PWA tags -->
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="TeamRunner">
+<meta name="apple-mobile-web-app-title" content="PaceMaker">
 <link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
 
 <!-- Favicon tags -->
