--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -1,6 +1,6 @@
 {
-  "short_name": "TeamRunner",
-  "name": "TeamRunner",
+  "short_name": "PaceMaker",
+  "name": "PaceMaker",
   "id": "/",
   "icons": [
     {
