--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -15,7 +15,7 @@
     class="h-[calc(100%-2rem)] flex flex-col overflow-y-auto p-2 bg-white dark:bg-slate-800 border dark:border-slate-700 m-4 mr-0 rounded-lg shadow-xl"
   >
     <div class="mx-2 mt-2 mb-4">
-      <%= inline_svg_tag 'logo.svg', class: 'w-48' %>
+      <%= link_to inline_svg_tag('logo.svg', class: 'w-48'), root_path %>
     </div>
 
     <!-- Main navigation links -->
