style(ui/ux): disable tap highlight when tapping buttons/links on mobile

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -155,4 +155,10 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+
+  /* Disable tap highlight when tapping buttons/links on mobile */
+  button,
+  a {
+    -webkit-tap-highlight-color: transparent;
+  }
 }
