fix(home): typo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -214,7 +214,7 @@
         <% if @recent_updates[:new_runs].any? %>
           <div class="pb-6 mt-10 mb-6 border-b dark:border-slate-700">
             <h1 class="subheading">Recent Runs</h1>
-            <p class="text-sm text-soft">Recent runs logged by members you know.</p>
+            <p class="text-sm text-soft">Recent runs logged by users you know.</p>
           </div>
 
           <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
