--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,13 @@
               <%= link_to inline_svg_tag('logo.svg', class: 'w-48'), root_path %>
               <%= render 'shared/pinned_pages_menu' %>
             </div>
+          <% else %>
+            <div class="flex justify-end mt-4 mr-4">
+              <button onclick="document.documentElement.classList.toggle('dark')" class="rounded-lg p-2 hover:bg-slate-200 dark:hover:bg-slate-800 active:bg-slate-200 dark:active:bg-slate-800 transition duration-200 ease-in-out">
+                <%= inline_svg_tag 'icons/sun.svg', class: 'size-6 block dark:hidden text-yellow-500' %>
+                <%= inline_svg_tag 'icons/moon.svg', class: 'size-6 hidden dark:block text-indigo-600' %>
+              </button>
+            </div>
           <% end %>
 
           <%= render 'shared/breadcrumbs' if user_signed_in? %>
