--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -1,23 +1,19 @@
 <div class="mb-24">
-  <div class="flex flex-wrap items-end justify-between gap-6 pb-6 mt-10 mb-6 border-b dark:border-slate-700">
-    <div>
-      <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.first_name}’s" %> Teams</h1>
-      <p class="text-soft">Teams <%= user == current_user ? 'you coach' : "#{user.first_name} coaches" %>.</p>
-    </div>
-
-    <%= link_to 'New team', new_team_path, class: 'btn btn-primary' if user == current_user && owned_teams.present? %>
+  <div class="pb-6 my-6 border-b border-slate-200 dark:border-slate-700">
+    <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.first_name}’s" %> Teams</h1>
+    <p class="text-soft">Teams <%= user == current_user ? 'you coach' : "#{user.first_name} coaches" %>.</p>
   </div>
 
   <% if owned_teams.present? %>
     <%= render 'teams/shared/team_list', teams: owned_teams %>
+
+    <div class="flex justify-center mt-12">
+      <%= link_to 'Create a team', new_team_path, class: 'btn btn-sm btn-primary btn-muted' if user == current_user %>
+    </div>
   <% else %>
-    <div class="flex flex-col items-center justify-center gap-6 py-12">
-      <% if user == current_user %>
-        <p class="text-soft text-center">You don't have any teams yet.</p>
-        <%= link_to 'New team', new_team_path, class: 'btn btn-primary' %>
-      <% else %>
-        <p class="text-soft text-center"><%= user.first_name %> doesn't have any teams yet.</p>
-      <% end %>
+    <div class="flex flex-col items-center justify-center gap-6 mt-12">
+      <p class="text-soft text-center"><%= user == current_user ? 'You don’t' : "#{user.first_name} doesn’t" %> have any teams.</p>
+      <%= link_to 'Create a team', new_team_path, class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
@@ -30,10 +26,14 @@
 
   <% if membered_teams.present? %>
     <%= render 'teams/shared/team_list', teams: membered_teams %>
+
+    <div class="flex justify-center mt-12">
+      <%= link_to 'Find a team to join', search_path, class: 'btn btn-sm btn-white btn-muted' if user == current_user %>
+    </div>
   <% else %>
-    <div class="flex flex-col items-center justify-center gap-6 py-12">
-      <p class="text-soft text-center">You're not a member of any teams yet.</p>
-      <%= link_to 'Find a team', teams_path, class: 'btn btn-white' %>
+    <div class="flex flex-col items-center justify-center gap-6 mt-12">
+      <p class="text-soft text-center"><%= user == current_user ? 'You’re' : "#{user.first_name} is" %> not a member of any teams.</p>
+      <%= link_to 'Find a team', search_path, class: 'btn btn-white' %>
     </div>
   <% end %>
 </div>
