--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -17,7 +17,7 @@
     <% end %>
 
     <%= turbo_frame_tag 'searchResults' do %>
-      <div class="flex flex-col items-center justify-center gap-6 py-12">
+      <div class="flex flex-col items-center justify-center gap-6 mt-12">
         <p class="text-soft text-center">Start typing to find teams or other members.</p>
       </div>
     <% end %>
