--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -45,17 +45,14 @@
   </div>
 </div>
 
-<% user_phone = user.phone_number? && user.show_phone? %>
-<% user_email = user.show_email? %>
-
-<% if user_email || user_phone || user_is_current %>
+<% if user.show_email? || user.show_phone? || user_is_current %>
   <div class="mb-24">
     <div class="pb-6 my-6 border-b border-slate-200 dark:border-slate-700">
       <h2 class="subheading">Contact</h2>
       <p class="text-sm text-soft">
         <% if user_is_current %>
           Your contact information.
-          <% if user_email || user_phone %>
+          <% if user.show_email? || user.show_phone? %>
             You can hide this in your <%= link_to 'settings', edit_user_registration_path(tab: 'settingsTab'), class: 'btn-link transition duration-200 ease-in-out' %>.
           <% else %>
             No one can see this except you. You can show this in your <%= link_to 'settings', edit_user_registration_path(tab: 'settingsTab'), class: 'btn-link transition duration-200 ease-in-out' %>.
@@ -67,11 +64,11 @@
     </div>
 
     <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
-      <% if user_email || user_is_current %>
+      <% if user.show_email? || user_is_current %>
         <div class="card flex flex-col">
           <div class="mb-6">
             <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300">Email Address</h2>
-            <% unless user_email %>
+            <% unless user.show_email? %>
               <div class="flex items-center gap-1">
                 <%= inline_svg_tag 'icons/eye-slash.svg', class: 'size-3.5 text-muted' %>
                 <p class="text-xs text-soft">Hidden from other users</p>
@@ -88,11 +85,11 @@
         </div>
       <% end %>
 
-      <% if user_phone || user_is_current %>
+      <% if user.show_phone? || (user_is_current & user.phone_number?) %>
         <div class="card flex flex-col">
           <div class="mb-6">
             <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300">Phone Number</h2>
-            <% unless user_phone %>
+            <% unless user.show_phone? %>
               <div class="flex items-center gap-1">
                 <%= inline_svg_tag 'icons/eye-slash.svg', class: 'size-3.5 text-muted' %>
                 <p class="text-xs text-soft">Hidden from other users</p>
