fix: only show create/find team buttons on user profile page for current user

--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -15,7 +15,7 @@
   <% else %>
     <div class="flex flex-col items-center justify-center gap-6 mt-12">
       <p class="text-soft text-center"><%= user_is_current ? 'You don’t' : "#{user.first_name} doesn’t" %> have any teams.</p>
-      <%= link_to 'Create a team', new_team_path, class: 'btn btn-primary' %>
+      <%= link_to 'Create a team', new_team_path, class: 'btn btn-primary' if user_is_current %>
     </div>
   <% end %>
 </div>
@@ -35,7 +35,7 @@
   <% else %>
     <div class="flex flex-col items-center justify-center gap-6 mt-12">
       <p class="text-soft text-center"><%= user_is_current ? 'You’re' : "#{user.first_name} is" %> not a member of any teams.</p>
-      <%= link_to 'Find a team', search_path, class: 'btn btn-white' %>
+      <%= link_to 'Find a team', search_path, class: 'btn btn-white' if user_is_current %>
     </div>
   <% end %>
 </div>
