feat: make logo a button to refresh instead of a link to root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
         <div class="h-full min-w-0 overflow-y-scroll">
           <% if user_signed_in? %>
             <div class="md:hidden flex items-center justify-between gap-2 mt-8 mx-4">
-              <%= link_to inline_svg_tag('logo.svg', class: 'w-48'), root_path %>
+              <button onclick="window.location.reload()" class="hover:opacity-75">
+                <%= inline_svg_tag('logo.svg', class: 'w-48') %>
+              </button>
               <%= render 'shared/pinned_pages_menu' %>
             </div>
           <% else %>
