--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -14,9 +14,9 @@
     data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
     class="h-[calc(100%-2rem)] flex flex-col overflow-y-auto p-2 bg-white dark:bg-slate-800 border dark:border-slate-700 m-4 mr-0 rounded-lg shadow-xl"
   >
-    <div class="mx-2 mt-2 mb-4">
-      <%= link_to inline_svg_tag('logo.svg', class: 'w-48'), root_path %>
-    </div>
+    <button onclick="window.location.reload()" class="mx-2 mt-2 mb-4 hover:opacity-75">
+      <%= inline_svg_tag('logo.svg', class: 'w-48') %>
+    </button>
 
     <!-- Main navigation links -->
     <div class="mb-6">
