style: make small find team button more visible on teams index page

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -31,7 +31,7 @@
       <%= render 'teams/shared/team_list', teams: @membered_teams %>
 
       <div class="flex justify-center mt-12">
-        <%= link_to 'Find a team to join', search_path, class: 'btn btn-sm btn-white btn-muted' %>
+        <%= link_to 'Find a team to join', search_path, class: 'btn btn-sm btn-dark btn-muted' %>
       </div>
     <% else %>
       <div class="flex flex-col items-center justify-center gap-6 mt-12">
