fix: 500 error due to team photo blob not present

--- a/app/views/shared/_team_photo.html.erb
+++ b/app/views/shared/_team_photo.html.erb
@@ -54,7 +54,7 @@
 
 <% icon_color_class = icon_color_class_map[icon_background] %>
 
-<% if team.photo.attached? %>
+<% if team.photo.attached? && team.photo&.blob&.persisted? && team.photo&.variable? %>
   <%= image_tag team.photo.variant(resize_to_limit: [px_size, px_size]).processed, class: "#{size_classes} object-cover #{image_classes}", **image_options %>
 <% elsif image_only %>
   <%= image_tag '', class: "#{size_classes} object-cover #{image_classes}", **image_options if team.persisted? && current_page?(edit_team_path(team)) %>
