fix: attempt to resolve `ActiveStorage::FileNotFoundError`

--- a/app/views/shared/_team_photo.html.erb
+++ b/app/views/shared/_team_photo.html.erb
@@ -60,6 +60,6 @@
   <%= image_tag '', class: "#{size_classes} object-cover #{image_classes}", **image_options if team.persisted? && current_page?(edit_team_path(team)) %>
 <% else %>
   <div class="grid place-items-center <%= size_classes %> <%= icon_background_class %> <%= image_classes %>">
-    <%= inline_svg_tag "icons/team#{icon_filled ? '-filled' : ''}.svg", class: "#{fallback_size_class} #{icon_color_class}" %>
+    <%= inline_svg_tag "icons/#{icon_filled ? 'team-filled' : 'team'}.svg", class: "#{fallback_size_class} #{icon_color_class}" %>
   </div>
 <% end %>
