--- a/app/views/shared/_user_photo.html.erb
+++ b/app/views/shared/_user_photo.html.erb
@@ -54,16 +54,26 @@
 } %>
 
 <% icon_color_class = icon_color_class_map[icon_background] %>
+<% avatar_check = user.avatar.attached? && user.avatar&.blob&.persisted? && user.avatar&.variable? %>
 
+<% unless image_only %>
+  <% svg_fallback = capture do %>
+    <div class="grid place-items-center <%= size_classes %> <%= icon_background_class %> <%= image_classes %>">
+      <%= inline_svg_tag "icons/#{icon_filled ? "#{icon_name}-filled" : icon_name}.svg", class: "#{fallback_size_class} #{icon_color_class}" %>
+    </div>
+  <% end %>
+<% end %>
 
-<% if user.avatar.attached? && user.avatar&.blob&.persisted? && user.avatar&.variable? %>
-  <%= image_tag user.avatar.variant(resize_to_limit: [px_size, px_size]).processed, class: "#{size_classes} object-cover #{image_classes}", **image_options %>
+<% if avatar_check %>
+  <% begin %>
+    <%= image_tag user.avatar.variant(resize_to_limit: [px_size, px_size]).processed, class: "#{size_classes} object-cover #{image_classes}", **image_options %>
+  <% rescue ActiveStorage::FileNotFoundError, StandardError => e %>
+    <%= svg_fallback %>
+  <% end %>
 <% elsif user.avatar_url %>
   <%= image_tag user.avatar_url, class: "#{size_classes} object-cover #{image_classes}", **image_options %>
 <% elsif image_only %>
   <%= image_tag '', class: "#{size_classes} object-cover #{image_classes}", **image_options if current_page?(edit_user_registration_path) %>
 <% else %>
-  <div class="grid place-items-center <%= size_classes %> <%= icon_background_class %> <%= image_classes %>">
-    <%= inline_svg_tag "icons/#{icon_filled ? "#{icon_name}-filled" : icon_name}.svg", class: "#{fallback_size_class} #{icon_color_class}" %>
-  </div>
+  <%= svg_fallback %>
 <% end %>
