fix: wrong icon used for leave team

--- a/app/views/teams/shared/_team_links.html.erb
+++ b/app/views/teams/shared/_team_links.html.erb
@@ -44,7 +44,7 @@
   <% end %>
 
   <button data-action="mousedown->modal#open" data-modal-id="leaveTeam" class="dropdown-option-destructive">
-    <%= inline_svg_tag 'icons/trash.svg', class: 'size-5' %>
+    <%= inline_svg_tag 'icons/log-out.svg', class: 'size-5' %>
     Leave team
   </button>
 
