--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -5,7 +5,8 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="PaceMaker">
-<link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
+
+<%= tag.link rel: 'manifest', href: pwa_manifest_path(format: :json), crossorigin: 'use-credentials' %>
 
 <!-- Favicon tags -->
 <%= favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon', sizes: '180x180' %>
